[package]
name = "rscan"
version = "0.1.0"
authors = ["Collins Huff collinsrhuff@gmail.com"]
edition = "2018"
description = "Port scanner"
license = "MIT"
repository = "https://github.com/seeyarh/rscan"
readme = "README.md"
keywords = ["portscanner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afpacket = "0.2.3"
nom = "6.1"
etherparse = "0.9.0"
log = "0.4"
crossbeam-channel = "0.5.0"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
clap = { version = "4.4.8", features = ["derive"] }



[dev-dependencies]
rand = "0.8.3"
veth-util-rs = {git = "https://github.com/seeyarh/veth-util-rs.git", branch = "main"}
serial_test = "0.5.1"
byteorder = "1.4.3"
